Changelog
=========

0.8.3 (unreleased)
------------------

- Work around jira-python bug #72 with non-ASCII server error messages.


0.8.2 (2013-09-25)
------------------

- Improve reporting of entries which cannot be matched.

- Fix commandline upload (broken after jira/redmine refactoring).


0.8.1 (2013-09-24)
------------------

- Work around jira-python bug #60 that makes multiple connections to different
  servers impossible.


0.8 (2013-09-19)
----------------

- Introduce command-line utility ``gtl-progress`` which calculates the work-done
  progress of a given (or the current by default) week.

- Introduce command-line utility ``gtl-log`` which can be used to add timelog
  entries from the command-line. A bash completion script is shipped to auto
  complete projects and tasks.

- Remove HT upload from upload script.

- Add JIRA bugtracker: supports uploading time logs and getting issue subject
  for Collmex reporting (#12846).


0.7.0 (2012-07-17)
------------------


- Assert that no entries with start after end are uploaded to collmex.

- Day parameter of cli is now optional (default: today).


0.6.1 (2012-02-21)
------------------

- Fixed brown-bag release.


0.6.0 (2012-02-21)
------------------

- Don't use inactive tasks in collmex.


0.5.2 (2012-02-06)
------------------

- Fixed brown-bag release.


0.5.1 (2012-02-06)
------------------

- Fixed daily and weekly report functions which were broken since version
  0.5.


0.5 (2012-01-26)
----------------

- Introduce command-line upload utility ``gtimelog-cli`` (#10105).


0.4.2 (2011-05-16)
------------------

- Make sure timelog comments uploaded to Redmine are at most 255 characters
  long, avoid including duplicate comments in the same time entry (#9016).


0.4.1 (2011-04-11)
------------------

- Fix bug that too many Redmine time entries were deleted (#8909).


0.4.0 (2011-04-07)
------------------

- Change Redmine integration to use the REST API (#8901).