@@ -14,7 +14,6 @@ gocept.cache = 0.5.2
 gocept.collmex = 1.3
 ipython = 1.1.0
 jira-python = 0.13
-lxml = 3.2.1
 mechanize = 0.2.5
 oauthlib = 0.6.0
 pytz = 2013b
