@@ -25,7 +25,6 @@ setup(
         'BeautifulSoup',
         'gocept.collmex>=1.2',
         'jira-python',
-        'lxml',
         'pyactiveresource==1.2dev-r77',
         'setuptools',
         'transaction',
