@@ -210,28 +210,6 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkImageMenuItem" id="fill_hour_tracker">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Fill _Hour Tracker</property>
-		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_fill_hour_tracker_activate" last_modification_time="Tue, 07 Sep 2004 07:02:40 GMT"/>
-		      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-
-		      <child internal-child="image">
-			<widget class="GtkImage" id="image86">
-			  <property name="visible">True</property>
-			  <property name="stock">gtk-justify-fill</property>
-			  <property name="icon_size">1</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-		      </child>
-		    </widget>
-		  </child>
-
-		  <child>
 		    <widget class="GtkImageMenuItem" id="fill_collmex">
 		      <property name="visible">True</property>
               <property name="label" translatable="yes">Fill _Collmex</property>
